Added images and text

--- a/index.html
+++ b/index.html
@@ -122,56 +122,102 @@
                 </div>
             </div>
 
-
             <div class="gallerySlider" id="gallerySlider2">
-                <div class="column colTitle">
-                    <p class="title">Patch</p>
-                    <p class="description">Patch is a work in progress midi control program. Through a custom-purposed Raspberry Pi and Teensy,
-                        we can simultaneously modify the patch - and other midi variables - of a Nord Keyboard and Virus
-                        TI synthesizer through the convenience and familiarity of a mobile web browser. Patch was in need
-                        of design assistance for the UI interface and identity of the software.</p>
-                </div>
-                <div class="column colFigure">
-                    <img class="titleFigure" id="figure2" src="Graphics/Patch_title.jpg"></img>
-                </div>
-                <div class="column colProcess">
-                    <p class="title">Identity and UI</p>
-                    <img class="figureProcess" src="Graphics/typo-corrected_01.jpg"></img>
-                    <img class="figureProcess" src="Graphics/typo-corrected_02.jpg"></img>
-                    <img class="figureProcess" src="Graphics/typo-corrected_03.jpg"></img>
-                    <img class="figureProcess" src="Graphics/typo-corrected_04.jpg"></img>
-                    <img class="figureProcess" src="Graphics/typo-corrected_05.jpg"></img>
-                    <img class="figureProcess" src="Graphics/typo-corrected_06.jpg"></img>
-                    <img class="figureProcess" src="Graphics/typo-corrected_07.jpg"></img>
-                    <img class="figureProcess" src="Graphics/typo-corrected_08.jpg"></img>
-                    <img class="figureProcess" src="Graphics/typo-corrected_09.jpg"></img>
+                <div id="scrollContent">
+                    <div class="column colTitle">
+                        <p class="title">Patch</p>
+                        <hr class="line">
+                        <p class="description">Patch is a work in progress midi control program. Through a custom-purposed Raspberry Pi and Teensy,
+                            we can simultaneously modify the patch - and other midi variables - of a Nord Keyboard and Virus
+                            TI synthesizer through the convenience and familiarity of a mobile web browser. Patch was in
+                            need of design assistance for the UI interface and identity of the software.</p>
+                    </div>
+                    <div class="column colProcess">
+                        <p class="title">Identity and UI</p>
+                        <img class="figureProcess figurePatch" src="Graphics/typo-corrected_01.jpg"></img>
+                        <img class="figureProcess figurePatch" src="Graphics/typo-corrected_02.jpg"></img>
+                        <img class="figureProcess figurePatch" src="Graphics/typo-corrected_03.jpg"></img>
+                        <img class="figureProcess figurePatch" src="Graphics/typo-corrected_04.jpg"></img>
+                        <img class="figureProcess figurePatch" src="Graphics/typo-corrected_05.jpg"></img>
+                        <img class="figureProcess figurePatch" src="Graphics/typo-corrected_06.jpg"></img>
+                        <img class="figureProcess figurePatch" src="Graphics/typo-corrected_07.jpg"></img>
+                        <img class="figureProcess figurePatch" src="Graphics/typo-corrected_08.jpg"></img>
+                        <img class="figureProcess figurePatch" src="Graphics/typo-corrected_09.jpg"></img>
+                    </div>
                 </div>
             </div>
+
             <div class="gallerySlider" id="gallerySlider3">
-                <div class="column colTitle">
-                    <p class="title">Matière Texture Swatch</p>
-                    <p class="description">To study the capacity of material textures and the effect of their combination, we were assigned to create
-                        a single entity composed of two materials with unique tactile qualities. My swatch used candle wax
-                        and poplar planks.</p>
-                </div>
-                <div class="column colFigure">
-                    <img class="titleFigure" id="figure3" src="Graphics/matiere_cover.jpg"></img>
-                </div>
-                <div class="column colProcess">
-                    <p class="title">Poplar Planks and Candle Wax</p>
-                    <p class="description">Melting the wax intrigued me, so I experimented with different factors’ effect on the cooling speed.
-                        I came to the conclusion that pouring wax onto water and a dry surface simultaneously would adhere
-                        the wax to the surface and quickly create a hardened structure that retained the likeness of the
-                        fluid state. Because wax repels water, the wax would unconditionally adhere to itself, lending the
-                        capability to create a complex wax labyrinth. I constructed a grid out of the planks which would
-                        serve as structural support for a 1x1 foot wax swatch. Then using clothespins, shoelace, and a ruler
-                        I created a mechanism to suspend the grid on the surface of the water (in a dishbin) so I could freely
-                        pour the wax onto both the water and the poplar</p>
-                    <img class="figureProcess" src="Graphics/matiere_process1.jpg"></img>
-                    <img class="figureProcess" src="Graphics/matiere_process2.jpg"></img>
-                    <img class="figureProcess" src="Graphics/matiere_process3.jpg"></img>
+                <div id="scrollContent">
+                    <div class="column colTitle">
+                        <p class="title">Poster Studies</p>
+                        <hr class="line">
+                        <p class="description">Given a set body of text and a rigid corresponding hierarchy, I created four 11 x 17 graphic arrangements
+                            while adhering to the University of Cincinnati branding guidelines. Through this process, I gained
+                            the ability to justify my design decisions through rational and topical relevance while conveying
+                            the identity of an organization.</p>
+                    </div>
+                    <div class="column colProcess">
+                        <div id="posterFlexContainer">
+                            <div id="posterFlex">
+                                <img class="figureProcess posterSubFlex" id="figure3" src="Graphics/POSTER/poster_2.jpg"></img>
+                                <img class="figureProcess posterSubFlex" id="figure4" src="Graphics/POSTER/poster_3.jpg"></img>
+                                <img class="figureProcess posterSubFlex" id="figure5" src="Graphics/POSTER/poster_4.jpg"></img>
+                            </div>
+                            <img class="figureProcess posterSubFlex" id="figure6" src="Graphics/POSTER/poster_4.jpg"></img>
+                            <img class="figureProcess posterSubFlex" id="figure6" src="Graphics/POSTER/poster_4.jpg"></img>
+                            <img class="figureProcess posterSubFlex" id="figure6" src="Graphics/POSTER/poster_4.jpg"></img>
+                        </div>
+
+                        <p class="title">Iteration After Iteration</p>
+                        <p class="processDescription" id="posterText1">From the project guidelines,
+                            <i>“Using the hierarchy presented below, develop a grid system that accommodates all of the following
+                                information in a concise and meaningful way. You must include the appropriate university
+                                logo. Use the font ‘Myriad Pro’ instead of the typeface specified in the Branding Guidelines.
+                            </i>
+                            <br>Full project document here.
+                        </p>
+                        <p class="processDescription" id="posterText2">This project spanned the entire second-half of the Typography 1 semester; shown here in the consequent
+                            absurdly enormous amount of work we have to show for it. For the first many iterations, we were
+                            charged to design by a grid, and avoid particular graphic elements. Eventually, we were encouraged
+                            to spread out, to put personality and a wider variety of brand elements into our composition.
+                        </p>
+                        <p class="processDescription" id="posterText3">I pursued the idea of implied space and depth for my first graphic poster. For the appearance of
+                            a clean and finalized result, I used Autodesk Maya to emulate studio-lit photography with renderings
+                            that implied the depth of the paper. For a paper-like effect to project text on, I used 2- dimensional
+                            planes.
+                        </p>
+                        <p class="processDescription" id="posterText4">Included with the University branding guidelines, a folder full of themed monograms to be used over
+                            photography and colored backgrounds to provide visual interest and brand affiliation. I dipped
+                            into the Blue Ash College monogram, as well as circular elements to divide space and emphasize
+                            areas of the hierarchy.
+                        </p>
+                        <p class="processDescription" id="posterText5">I believe these designs were my least successful for two reasons: first, the monograms became the
+                            visual focus - fighting the content and failing to show university affiliation. Second, the visual
+                            elements failed to reflect the content and purpose of the poster, to sell the Communication Design
+                            program. I later realized while I was coming up with my final design, that this was a problem
+                            with my 2D plane iteration, too.
+                        </p>
+                        <p class="processDescription" id="posterText6">I needed to find something which reflected what I was designing for, something of an overarching
+                            metaphor.
+                        </p>
+                        <p class="processDescription" id="posterText7">I was sitting at Panera, being a basic Panera-goer eating my bread bowl and sipping my tea. In a
+                            uniquely design student fashion, I flagged a booth as my territory and immediately spread all
+                            my supplies everywhere (riding the risk of spilling my soup all over my binder). The mess, I
+                            realized, was composed of widely used tools for cultivating the creative process by many, I imagine,
+                            across the globe. If my Bic ballpoint pen, laptop and mouse, scrap paper and lunatic scrawl could
+                            be universally recognized as a setup for design, then I should be able to seize such symbolism
+                            as content for my poster.
+                        </p>
+                        <p class="processDescription" id="posterText8">Our professor had been encouraging us to utilize the grid as a part of our graphic composition, but
+                            some of his suggestions struck me as somewhat arbitrary. I thought about the halftone grid, an
+                            element associated with the pop art and grunge design movements, it seemed like the perfect solution
+                            for my design.
+                        </p>
+                    </div>
                 </div>
             </div>
+
             <div class="gallerySlider" id="gallerySlider4">
                 <div class="column colTitle">
                     <p class="title">Matière Texture Swatch</p>
