--- a/index.html
+++ b/index.html
@@ -316,15 +316,24 @@
                         <hr>
                         <div class="dropdownContent">
                             <div class="slideshow">
-                                <img class="figureProcess process3D" id="figure11.1" src="Graphics/digital_3D/abstract-1.jpg"></img>
-                                <img class="figureProcess process3D" id="figure11.1" src="Graphics/digital_3D/abstract-1.jpg"></img>
-                                <img class="figureProcess process3D" id="figure11.1" src="Graphics/digital_3D/abstract-1.jpg"></img>
-                                <img class="figureProcess process3D" id="figure11.1" src="Graphics/digital_3D/abstract-1.jpg"></img>
-                                <img class="figureProcess process3D" id="figure11.1" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                                <img class="figureProcess processPhoto" id="figure18.1" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                                <img class="figureProcess processPhoto" id="figure18.2" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                                <img class="figureProcess processPhoto" id="figure18.3" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                                <img class="figureProcess processPhoto" id="figure18.4" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                                <img class="figureProcess processPhoto" id="figure18.5" src="Graphics/digital_3D/abstract-1.jpg"></img>
                             </div>
                         </div>
                         <h2 class="subTitle">Trips</h2>
                         <hr>
+                        <div class="dropdownContent">
+                            <div class="slideshow">
+                                <img class="figureProcess processPhoto" id="figure19.1" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                                <img class="figureProcess processPhoto" id="figure19.2" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                                <img class="figureProcess processPhoto" id="figure19.3" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                                <img class="figureProcess processPhoto" id="figure19.4" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                                <img class="figureProcess processPhoto" id="figure19.5" src="Graphics/digital_3D/abstract-1.jpg"></img>
+                            </div>
+                        </div>
 
                         <p class="processDescription">The model was meant to liken cascading and asymmetrical movement a nontraditional ebb from bottom
                             right to upper left culminating in a fractal spiral on the left shoulder.
