--- a/index.html
+++ b/index.html
@@ -445,55 +445,41 @@
             <div class="gallerySlider" id="gallerySlider7">
                 <div id="scrollContent">
                     <div class="column colTitle">
-                        <p class="title">In the Style of Neville Brody</p>
+                        <p class="title">Icon and Graphic Elements</p>
                         <hr class="line">
-                        <p class="description">One of our final class projects involved an imaginary scenario: each of the students has been hired
-                            by PBS to design a poster for an episode in an upcoming series about the history of design. Each
-                            episode will cover a different designer who led the design of their time.</p>
+                        <p class="description">Beginning with an object we had drawn for critique in Drawing I the previous semester, we designed
+                            an icon then picked a phrase associated with it to combine them in one black and white poster.
+                            The poster had to exhibit clear derivative from the Fibonacci sequence and effectiveness in black
+                            and white before optional completion in color.</p>
                     </div>
                     <div class="column colProcess">
-                        <p class="title">"The Message is the Medium"</p>
-                        <p class="processDescription">Naturally, we drew designers out of a hat. I drew a particular rebel named Neville Brody.
-                            <br>
-                            <br> Known for his early work for Fetish Records and his design for The Face Magazine in the 80’s
-                            and - later in the age of the internet - his leadership in digital font creation, dissemination,
-                            and usage thereof through FUSE and FontShop.
-                            <br>
-                            <br>In his early days, Brody was a punk. He stayed on the forefront of design by experimentation
-                            with the abstract and precedent. He disdained his professors’ instruction, as they deemed his
-                            work “uncommercial.” He was almost expelled from The Royal College of Art in London after placing
-                            the Queen’s face sideways on a postage stamp design.
-                            <br>
-                            <br>While designing the poster, I stayed true to Brody’s attention to the defining philosophy of
-                            each project that is consistent in all his work. Through each unique iteration, I explored several
-                            of his unique works created through different points in his career, eventually settling on the
-                            style of his early work of the 80’s.
+                        <p class="title">Razor Sharp</p>
+                        <p class="processDescription">This poster project was completed in tandem with the PBS Designer Series poster (which also had to
+                            be designed by the Fibonacci sequence), so it’s needless to say our poster designing skills were
+                            <i>razor sharp</i> by the end of the semester.
                         </p>
 
-                        <div id="processBrodyGrid">
-                            <p class="processTextBrody" id="figure10Text">While leafing through
-                                <i>The Graphic Language of Neville Brody,</i> a compilation and analysis of Brody's work by
-                                Jon Wozencroft, I came across a very intriguing set of album covers featuring a very gritty
-                                and inaccessible halftones and near-tribal markmaking - a motif and interest which spans
-                                brody's entire career. We were required to include an image of one of our designer's work,
-                                so I selected Stephen Mallinder's
-                                <i>Pow Wow</i> and integrated it's style with my work.
-                                <br>
-                                <br>Each of the fonts used in the posters are Neville Brody's own, affiliated either with FUSE
-                                or his personal work.
-                            </p>
-                            <img class="figureProcess processBrody" id="figure22.1" src="Graphics/RAZOR/razor-1-1.jpg"></img>
-                            <p></p>
-                            <img class="figureProcess processBrody" id="figure22.2" src="Graphics/RAZOR/razor-1-2.jpg"></img>
+                        <img class="figureProcess processRazorHead" id="figure22.1" src="Graphics/RAZOR/razor-1-2.jpg"></img>
+                        <p class="processTextRazorHead" id="figure10Text">When developing the poster, we paid specific attention to the texture resulting from the text and
+                            icon, the Fibonacci sequence, and the visual narrative each of the elements created. Fairly soon
+                            into my creative process, I came up with the idea to use the words "razor sharp" layered over
+                            each other to look like bristly hair, and to use the razor to shave it. I divided the page down
+                            its diagonal to create two divisions that the razor’s handle would lie in the center of. The
+                            head of the razor is parallel to the opposite diagonal.
+                        </p>
 
-                            <p class="processTextBrody" id="figure11Text">Markmaking is a lifelong iterest of Neville Brody. For my first of several iterations, I chose
-                                to explore it in the convenience of digital space to find the somewhat primal effect he found
-                                so intriguing.</p>
+                        <div id="processRazorGrid">
+                            <p class="processTextBrody" id="figure10.5Text">I treated the first third of the grid as the shaved part of the face - in the color version you
+                                can see a subtle skin texture overlayed. The combination of the saturated red and skin was
+                                intended to evoke a sense of danger or alert, implying that the razor is, in fact, razor
+                                sharp and will draw blood if used carelessly.</p>
+                            <img class="figureProcess processBrody" id="figure22.2" src="Graphics/RAZOR/razor-1-1.jpg"></img>
+
+                            <p class="processTextBrody" id="figure11Text">The two-part project began by visually exploring the object we drew as part of the Drawing I
+                                curriculum in order to create an icon which was functional on a large and small scale. It
+                                was certainly difficult at times to come up with creative, original, and dynamic iterations.</p>
                             <img class="figureProcess processBrody" id="figure23.1" src="Graphics/RAZOR/razor-2-1.jpg"></img>
-
-                            <p class="processTextBrody" id="figure12Text">A face is often seen in his work, especially early in his career, the faces were obscured in
-                                some way. I took an image of Brody as a young-un and in photoshop I desaturated it and applied
-                                a threshold filter to achieve the two-tone black and white.</p>
+                            <p></p>
                             <img class="figureProcess processBrody" id="figure24.1" src="Graphics/RAZOR/razor-3-1.jpg"></img>
                             <p></p>
                             <img class="figureProcess processBrody" id="figure24.2" src="Graphics/RAZOR/razor-3-2.jpg"></img>
@@ -505,12 +491,11 @@
                             <img class="figureProcess processBrody" id="figure24.5" src="Graphics/RAZOR/razor-3-5.jpg"></img>
 
 
-                            <p class="processTextBrody" id="figure13Text">Once again experimenting with primality of human nature, I chose to include paint splatters to
-                                imply that the poster has been slung at carelessly. I obscured Brody's face by converting
-                                it to halftones and integrating it with the background - almost as if it were burnt - with
-                                a graphite-textured photoshop brush.
-                                <br>
-                                <br>This inital experiment was the precursor for the concepts I used in the final.
+                            <p class="processTextBrody" id="figure13Text">We were encouraged to produce a dynamic solution that would also be easily recognized as the
+                                object we'd gotten stuck with. Becuase of this, our professor had me change my object from
+                                an electric razor (which come in different forms and some have never come in contact with
+                                one). To nail the perspective - even after finding reference photos - I created a simple
+                                geometric 3D model to aid in my efforts.
                             </p>
                             <img class="figureProcess processBrody" id="figure25.1" src="Graphics/RAZOR/razor-4-1.jpg"></img>
                             <p></p>
@@ -522,11 +507,8 @@
                             <p></p>
                             <img class="figureProcess processBrody" id="figure25.5" src="Graphics/RAZOR/razor-4-5.jpg"></img>
 
-                            <p class="processTextBrody" id="figure13Text">Once again experimenting with primality of human nature, I chose to include paint splatters to imply that the poster has
-                                been slung at carelessly. I obscured Brody's face by converting it to halftones and integrating it with the background
-                                - almost as if it were burnt - with a graphite-textured photoshop brush.
-                                <br>
-                                <br>This inital experiment was the precursor for the concepts I used in the final.
+                            <p class="processTextBrody" id="figure13Text"> Next, we selected our phrases, then studied our library of fonts to create a cohesive appearance
+                                which reflected the emotions evoked by the phrase.
                             </p>
                             <img class="figureProcess processBrody" id="figure26.1" src="Graphics/RAZOR/razor-5-1.jpg"></img>
                         </div>
