--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                             </div>
 
                             <div class="dropdownHeader" onclick="dropdownSlideshow(1)">
-                                <h2 class="subTitle">Trips</h2>
+                                <h2 class="subTitle">Portraits</h2>
                                 <svg class="plusLines" height="20" width="20">
                                     <line x1="10" y1="0" x2="10" y2="20" />
                                     <line x1="0" y1="10" x2="20" y2="10" />
@@ -376,11 +376,11 @@
                             <hr class="photoLine">
                             <div class="dropdownContent">
                                 <div class="slideshow" id="slideshow1">
-                                    <img class="figureProcess processPhoto" id="figure18.1" src="Graphics/PHOTOGRAPHY/abstract/_DSC0444.jpg"></img>
-                                    <img class="figureProcess processPhoto" id="figure18.2" src="Graphics/PHOTOGRAPHY/abstract/_DSC0604.jpg"></img>
-                                    <img class="figureProcess processPhoto" id="figure18.3" src="Graphics/PHOTOGRAPHY/abstract/_DSC0755.jpg"></img>
-                                    <img class="figureProcess processPhoto" id="figure18.4" src="Graphics/PHOTOGRAPHY/abstract/_DSC1392.jpg"></img>
-                                    <img class="figureProcess processPhoto" id="figure18.5" src="Graphics/PHOTOGRAPHY/abstract/leaf-this-path.jpg"></img>
+                                    <img class="figureProcess processPhoto" id="figure18.1" src="Graphics/PHOTOGRAPHY/portraits/portraits-1.jpg"></img>
+                                    <img class="figureProcess processPhoto" id="figure18.2" src="Graphics/PHOTOGRAPHY/portraits/portraits-2.jpg"></img>
+                                    <img class="figureProcess processPhoto" id="figure18.3" src="Graphics/PHOTOGRAPHY/portraits/portraits-3.jpg"></img>
+                                    <img class="figureProcess processPhoto" id="figure18.4" src="Graphics/PHOTOGRAPHY/portraits/portraits-4.jpg"></img>
+                                    <img class="figureProcess processPhoto" id="figure18.5" src="Graphics/PHOTOGRAPHY/portraits/portraits-5.jpg"></img>
                                 </div>
                                 <button class="slideshowButton shiftLeft" onclick="incrementSlide(1, 0)">
                                     <img class="shiftLeftButton" src="Graphics/ICONS/button.svg">
