change photography background and photography text

--- a/index.html
+++ b/index.html
@@ -328,17 +328,13 @@
                         <div class="column colProcess">
                             <p class="title">These are my photos</p>
 
-                            <p class="photoDescription">I've been photographing things since I was a little kid. I remember
-                                receiving my DSi- the first Nintendo portable device with a camera- which I took everywhere
-                                with me. During a family vacation to Yellowstone National Park, it was clear that this little
-                                kid had a passion for taking pictures. Landscapes? Document. Wildlife? Document. Food? Document.
-                                The week we spent camping and hiking around yielded over 3,000 photos of the amazing things
-                                we'd seen.
-                                <br>
-                                <br>Fast forward 8 years, as senior in high school I received a DSLR camera for my birthday.
-                                I brought this camera on every trip I had that summer: a few days in New York City? 30gb.
-                                RV in Alaskan Wilderness? 60gb. 350 mile Biking Trip? 45gb. Even if it fails to become a
-                                career, photography will remain a part myself for the rest of my life.
+                            <p class="photoDescription">Photography is a passion of mine which bleeds greatly over into 3D Mod- eling. I find these two arts of composition fascinating
+                            because of their capacity to control a viewer’s bias because of it’s narrow portrayal of one subject. Abstract photography
+                            deals with a similar idea; in some instanc- es, focusing an abnormal amount on a part of the subject may render the subject
+                            unrecognizable. 
+                            <br> 
+                            <br>While Adobe Photoshop has the potential to change a photograph in amazing ways, there is a point on that
+                            spectrum where an image loses its integrity. These images have been minimally post-processed.
                             </p>
 
                             <div class="dropdownHeader" onclick="dropdownSlideshow(0)">
